[add] container principale

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <title>Boolzap</title>
 </head>
 <body>
-    
+    <main>
+        <div class="container flex">
+            <div class="box-sx debug">
+                
+            </div>
+            <div class="box-dx debug"></div>
+        </div>
+    </main>
 </body>
 </html>
