--- a/index.html
+++ b/index.html
@@ -15,10 +15,69 @@
 <body>
     <main>
         <div class="container flex">
-            <div class="box-sx debug">
-                
+            <div class="col-sm debug">
+                <div class="nav debug flex">
+                    <div class="image-top debug"></div>
+                    <div class="icone flex debug">
+                        <i class="fa-solid fa-circle-notch"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                </div>
+                <div class="nav-bell"></div>
+                <div class="users debug flex column">
+                    <div class="search flex debug">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="text" id="cerca">
+                    </div>
+                    <div class="user flex debug">
+                        <div class="image debug"></div>
+                        <div class="text debug"></div>
+                    </div>
+                    <div class="user flex debug">
+                        <div class="image debug"></div>
+                        <div class="text debug"></div>
+                    </div>
+                    <div class="user flex debug">
+                        <div class="image debug"></div>
+                        <div class="text debug"></div>
+                    </div>
+                    <div class="user flex debug">
+                        <div class="image debug"></div>
+                        <div class="text debug"></div>
+                    </div>
+                    <div class="user flex debug">
+                        <div class="image debug"></div>
+                        <div class="text debug"></div>
+                    </div>
+                    <div class="user flex debug">
+                        <div class="image debug"></div>
+                        <div class="text debug"></div>
+                    </div>
+                    <div class="user flex debug">
+                        <div class="image debug"></div>
+                        <div class="text debug"></div>
+                    </div>
+                    <div class="user flex debug">
+                        <div class="image debug"></div>
+                        <div class="text debug"></div>
+                    </div>
+                    <div class="user flex debug">
+                        <div class="image debug"></div>
+                        <div class="text debug"></div>
+                    </div>
+                    <div class="user flex debug">
+                        <div class="image debug"></div>
+                        <div class="text debug"></div>
+                    </div>
+                    
+                </div>
             </div>
-            <div class="box-dx debug"></div>
+            <div class="col-large flex column debug">
+                <div class="nav debug flex"></div>
+                <div class="main-chat"></div>
+                <div class="nav-btm debug flex"></div>
+            </div>
         </div>
     </main>
 </body>
