search bar + nav top main

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                     <div class="nav debug flex">
                         <div class="image-top debug"></div>
                         <div class="icone flex debug">
-                            <i class="fa-solid fa-circle-notch"></i>
-                            <i class="fa-solid fa-message"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                            <a href="#"><i class="fa-solid fa-circle-notch"></i></a>
+                            <a href="#"><i class="fa-solid fa-message"></i></a>
+                            <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         </div>
                     </div>
                     <div class="nav-bell"></div>
                     <div class="search flex debug">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" id="cerca">
+                        <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                        <input type="text" placeholder="     Cerca o inizia una nuova chat" id="cerca">
                     </div>
                     <div class="users debug flex column">
                         <div class="user flex debug">
@@ -75,7 +75,16 @@
                     </div>
                 </div>
                 <div class="col-large flex column debug">
-                    <div class="nav debug flex"></div>
+                    <div class="nav debug flex justify-between ">
+                        <div class="img-status debug">
+                            <div class="image-top debug"></div>
+                        </div>
+                        <div class="icone flex debug">
+                            <a href="#"><i class="fa-solid fa-circle-notch"></i></a>
+                            <a href="#"><i class="fa-solid fa-message"></i></a>
+                            <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                        </div>
+                    </div>
                     <div class="main-chat"></div>
                     <div class="nav-btm debug flex"></div>
                 </div>
