--- a/index.html
+++ b/index.html
@@ -76,12 +76,16 @@
                 </div>
                 <div class="col-large flex column debug">
                     <div class="nav debug flex justify-between ">
-                        <div class="img-status debug">
+                        <div class="img-status flex debug">
                             <div class="image-top debug"></div>
+                            <div class="accesso flex column justify-center debug">
+                                <h3>Michele</h3>
+                                <p>Ultimo accesso oggi alle 16:26</p>
+                            </div>
                         </div>
                         <div class="icone flex debug">
-                            <a href="#"><i class="fa-solid fa-circle-notch"></i></a>
-                            <a href="#"><i class="fa-solid fa-message"></i></a>
+                            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                            <a href="#"><i class="fa-solid fa-paperclip"></i></a>
                             <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         </div>
                     </div>
