nav bar btm + input text + icone

--- a/index.html
+++ b/index.html
@@ -90,7 +90,17 @@
                         </div>
                     </div>
                     <div class="main-chat"></div>
-                    <div class="nav-btm debug flex"></div>
+                    <div class="nav-btm debug flex">
+                        <div class="emoji flex justify-center align-center debug">
+                            <a href="#"><i class="fa-regular fa-face-smile"></i></a>
+                        </div>
+                        <div class="scrivi flex debug">
+                            <input type="text" placeholder="    Scrivi un messaggio" id="txt">
+                        </div>
+                        <div class="vocale flex justify-center align-center debug">
+                            <a href="#"><i class="fa-solid fa-microphone"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
