--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <div class="container flex">
                 <div class="col-sm debug">
                     <div class="nav debug flex">
-                        <div class="image-top debug"></div>
+                        <div class="image-top debug">
+                            <img src="img/avatar_io.jpg" alt="">
+                        </div>
                         <div class="icone flex debug">
                             <a href="#"><i class="fa-solid fa-circle-notch"></i></a>
                             <a href="#"><i class="fa-solid fa-message"></i></a>
@@ -32,43 +34,66 @@
                     </div>
                     <div class="users debug flex column">
                         <div class="user flex debug">
-                            <div class="image debug"></div>
+                            <div class="image debug">
+                                <img src="img/avatar_2.jpg" alt="">
+                            </div>
+                            <div class="text flex column justify-center debug">
+                                <h3>Fabio</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </div>
+                        <div class="user flex debug">
+                            <div class="image debug">
+                                <img src="img/avatar_3.jpg" alt="">
+                            </div>
                             <div class="text debug"></div>
                         </div>
                         <div class="user flex debug">
-                            <div class="image debug"></div>
+                            <div class="image debug">
+                                <img src="img/avatar_4.jpg" alt="">
+                            </div>
                             <div class="text debug"></div>
                         </div>
                         <div class="user flex debug">
-                            <div class="image debug"></div>
+                            <div class="image debug">
+                                <img src="img/avatar_5.jpg" alt="">
+                            </div>
                             <div class="text debug"></div>
                         </div>
                         <div class="user flex debug">
-                            <div class="image debug"></div>
+                            <div class="image debug">
+                                <img src="img/avatar_6.jpg" alt="">
+                            </div>
                             <div class="text debug"></div>
                         </div>
                         <div class="user flex debug">
-                            <div class="image debug"></div>
+                            <div class="image debug">
+                                <img src="img/avatar_7.jpg" alt="">
+                            </div>
                             <div class="text debug"></div>
                         </div>
                         <div class="user flex debug">
-                            <div class="image debug"></div>
+                            <div class="image debug">
+                                <img src="img/avatar_8.jpg" alt="">
+                            </div>
                             <div class="text debug"></div>
                         </div>
                         <div class="user flex debug">
-                            <div class="image debug"></div>
+                            <div class="image debug">
+                                <img src="img/avatar_2.jpg" alt="">
+                            </div>
                             <div class="text debug"></div>
                         </div>
                         <div class="user flex debug">
-                            <div class="image debug"></div>
+                            <div class="image debug">
+                                <img src="img/avatar_5.jpg" alt="">
+                            </div>
                             <div class="text debug"></div>
                         </div>
                         <div class="user flex debug">
-                            <div class="image debug"></div>
-                            <div class="text debug"></div>
-                        </div>
-                        <div class="user flex debug">
-                            <div class="image debug"></div>
+                            <div class="image debug">
+                                <img src="img/avatar_3.jpg" alt="">
+                            </div>
                             <div class="text debug"></div>
                         </div>
                         
@@ -77,7 +102,9 @@
                 <div class="col-large flex column debug">
                     <div class="nav debug flex justify-between ">
                         <div class="img-status flex debug">
-                            <div class="image-top debug"></div>
+                            <div class="image-top debug">
+                                <img src="img/avatar_1.jpg" alt="">
+                            </div>
                             <div class="accesso flex column justify-center debug">
                                 <h3>Michele</h3>
                                 <p>Ultimo accesso oggi alle 16:26</p>
