--- a/index.html
+++ b/index.html
@@ -41,60 +41,117 @@
                                 <h3>Fabio</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
+                            <div class="time debug">
+                                <p>16:05</p>
+                            </div>
                         </div>
                         <div class="user flex debug">
                             <div class="image debug">
                                 <img src="img/avatar_3.jpg" alt="">
                             </div>
-                            <div class="text debug"></div>
+                            <div class="text flex column justify-center debug">
+                                <h3>Samuele</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <div class="time debug">
+                                <p>16:05</p>
+                            </div>
                         </div>
                         <div class="user flex debug">
                             <div class="image debug">
                                 <img src="img/avatar_4.jpg" alt="">
                             </div>
-                            <div class="text debug"></div>
+                            <div class="text flex column justify-center debug">
+                                <h3>Alessandro B.</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <div class="time debug">
+                                <p>16:05</p>
+                            </div>
                         </div>
                         <div class="user flex debug">
                             <div class="image debug">
                                 <img src="img/avatar_5.jpg" alt="">
                             </div>
-                            <div class="text debug"></div>
+                            <div class="text flex column justify-center debug">
+                                <h3>Alessandro L.</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <div class="time debug">
+                                <p>16:05</p>
+                            </div>
                         </div>
                         <div class="user flex debug">
                             <div class="image debug">
                                 <img src="img/avatar_6.jpg" alt="">
                             </div>
-                            <div class="text debug"></div>
+                            <div class="text flex column justify-center debug">
+                                <h3>Claudia</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <div class="time debug">
+                                <p>16:05</p>
+                            </div>
                         </div>
                         <div class="user flex debug">
                             <div class="image debug">
                                 <img src="img/avatar_7.jpg" alt="">
                             </div>
-                            <div class="text debug"></div>
+                            <div class="text flex column justify-center debug">
+                                <h3>Federico</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <div class="time debug">
+                                <p>16:05</p>
+                            </div>
                         </div>
                         <div class="user flex debug">
                             <div class="image debug">
                                 <img src="img/avatar_8.jpg" alt="">
                             </div>
-                            <div class="text debug"></div>
+                            <div class="text flex column justify-center debug">
+                                <h3>Davide</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <div class="time debug">
+                                <p>16:05</p>
+                            </div>
                         </div>
                         <div class="user flex debug">
                             <div class="image debug">
                                 <img src="img/avatar_2.jpg" alt="">
                             </div>
-                            <div class="text debug"></div>
+                            <div class="text flex column justify-center debug">
+                                <h3>Peter</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <div class="time debug">
+                                <p>16:05</p>
+                            </div>
                         </div>
                         <div class="user flex debug">
                             <div class="image debug">
                                 <img src="img/avatar_5.jpg" alt="">
                             </div>
-                            <div class="text debug"></div>
+                            <div class="text flex column justify-center debug">
+                                <h3>Walter</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <div class="time debug">
+                                <p>16:05</p>
+                            </div>
                         </div>
                         <div class="user flex debug">
                             <div class="image debug">
-                                <img src="img/avatar_3.jpg" alt="">
+                                <img src="img/avatar_6.jpg" alt="">
                             </div>
-                            <div class="text debug"></div>
+                            <div class="text flex column justify-center debug">
+                                <h3>Olivia</h3>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                            <div class="time debug">
+                                <p>16:05</p>
+                            </div>
                         </div>
                         
                     </div>
