--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
                             <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         </div>
                     </div>
-                    <div class="nav-bell"></div>
+                    <div class="nav-bell flex">
+                        <div class="bell debug">
+                            <i class="fa-solid fa-bell-slash"></i>
+                        </div>
+                        <div class="accesso flex column justify-center debug">
+                            <h3>Ricevi notifiche di nuovi messaggi</h3>
+                            <p><a href="#">Attiva notifiche desktop</a></p>
+                        </div>
+                    </div>
                     <div class="search flex debug">
                         <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                         <input type="text" placeholder="     Cerca o inizia una nuova chat" id="cerca">
@@ -54,7 +62,7 @@
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                             <div class="time debug">
-                                <p>16:05</p>
+                                <p>16:03</p>
                             </div>
                         </div>
                         <div class="user flex debug">
@@ -66,7 +74,7 @@
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                             <div class="time debug">
-                                <p>16:05</p>
+                                <p>16:00</p>
                             </div>
                         </div>
                         <div class="user flex debug">
@@ -78,7 +86,7 @@
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                             <div class="time debug">
-                                <p>16:05</p>
+                                <p>16:15</p>
                             </div>
                         </div>
                         <div class="user flex debug">
@@ -90,7 +98,7 @@
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                             <div class="time debug">
-                                <p>16:05</p>
+                                <p>15:00</p>
                             </div>
                         </div>
                         <div class="user flex debug">
@@ -102,7 +110,7 @@
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                             <div class="time debug">
-                                <p>16:05</p>
+                                <p>15:35</p>
                             </div>
                         </div>
                         <div class="user flex debug">
@@ -114,7 +122,7 @@
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                             <div class="time debug">
-                                <p>16:05</p>
+                                <p>16:45</p>
                             </div>
                         </div>
                         <div class="user flex debug">
@@ -126,7 +134,7 @@
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                             <div class="time debug">
-                                <p>16:05</p>
+                                <p>16:01</p>
                             </div>
                         </div>
                         <div class="user flex debug">
@@ -138,7 +146,7 @@
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                             <div class="time debug">
-                                <p>16:05</p>
+                                <p>16:50</p>
                             </div>
                         </div>
                         <div class="user flex debug">
@@ -150,7 +158,7 @@
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
                             <div class="time debug">
-                                <p>16:05</p>
+                                <p>16:47</p>
                             </div>
                         </div>
                         
