main chat inizio

--- a/index.html
+++ b/index.html
@@ -181,7 +181,10 @@
                             <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         </div>
                     </div>
-                    <div class="main-chat"></div>
+                    <div class="main-chat flex column debug">
+                        <div class="msg-sent debug"></div>
+                        <div class="msg-received"></div>
+                    </div>
                     <div class="nav-btm debug flex">
                         <div class="emoji flex justify-center align-center debug">
                             <a href="#"><i class="fa-regular fa-face-smile"></i></a>
