--- a/index.html
+++ b/index.html
@@ -16,183 +16,191 @@
     <main>
         <div class="main-wrap flex">
             <div class="container flex">
-                <div class="col-sm debug">
-                    <div class="nav debug flex">
-                        <div class="image-top debug">
+                <div class="col-sm ">
+                    <div class="nav  flex">
+                        <div class="image-top ">
                             <img src="img/avatar_io.jpg" alt="">
                         </div>
-                        <div class="icone flex debug">
+                        <div class="icone flex ">
                             <a href="#"><i class="fa-solid fa-circle-notch"></i></a>
                             <a href="#"><i class="fa-solid fa-message"></i></a>
                             <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         </div>
                     </div>
                     <div class="nav-bell flex">
-                        <div class="bell debug">
+                        <div class="bell ">
                             <i class="fa-solid fa-bell-slash"></i>
                         </div>
-                        <div class="accesso flex column justify-center debug">
+                        <div class="accesso flex column justify-center ">
                             <h3>Ricevi notifiche di nuovi messaggi</h3>
                             <p><a href="#">Attiva notifiche desktop</a></p>
                         </div>
                     </div>
-                    <div class="search flex debug">
+                    <div class="search flex ">
                         <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                         <input type="text" placeholder="     Cerca o inizia una nuova chat" id="cerca">
                     </div>
-                    <div class="users debug flex column">
-                        <div class="user flex debug">
-                            <div class="image debug">
+                    <div class="users  flex column">
+                        <div class="user flex ">
+                            <div class="image ">
                                 <img src="img/avatar_2.jpg" alt="">
                             </div>
-                            <div class="text flex column justify-center debug">
+                            <div class="text flex column justify-center ">
                                 <h3>Fabio</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
-                            <div class="time debug">
+                            <div class="time ">
                                 <p>16:05</p>
                             </div>
                         </div>
-                        <div class="user flex debug">
-                            <div class="image debug">
+                        <div class="user flex ">
+                            <div class="image ">
                                 <img src="img/avatar_3.jpg" alt="">
                             </div>
-                            <div class="text flex column justify-center debug">
+                            <div class="text flex column justify-center ">
                                 <h3>Samuele</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
-                            <div class="time debug">
+                            <div class="time ">
                                 <p>16:03</p>
                             </div>
                         </div>
-                        <div class="user flex debug">
-                            <div class="image debug">
+                        <div class="user flex ">
+                            <div class="image ">
                                 <img src="img/avatar_4.jpg" alt="">
                             </div>
-                            <div class="text flex column justify-center debug">
+                            <div class="text flex column justify-center ">
                                 <h3>Alessandro B.</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
-                            <div class="time debug">
+                            <div class="time ">
                                 <p>16:00</p>
                             </div>
                         </div>
-                        <div class="user flex debug">
-                            <div class="image debug">
+                        <div class="user flex ">
+                            <div class="image ">
                                 <img src="img/avatar_5.jpg" alt="">
                             </div>
-                            <div class="text flex column justify-center debug">
+                            <div class="text flex column justify-center ">
                                 <h3>Alessandro L.</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
-                            <div class="time debug">
+                            <div class="time ">
                                 <p>16:15</p>
                             </div>
                         </div>
-                        <div class="user flex debug">
-                            <div class="image debug">
+                        <div class="user flex ">
+                            <div class="image ">
                                 <img src="img/avatar_6.jpg" alt="">
                             </div>
-                            <div class="text flex column justify-center debug">
+                            <div class="text flex column justify-center ">
                                 <h3>Claudia</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
-                            <div class="time debug">
+                            <div class="time ">
                                 <p>15:00</p>
                             </div>
                         </div>
-                        <div class="user flex debug">
-                            <div class="image debug">
+                        <div class="user flex ">
+                            <div class="image ">
                                 <img src="img/avatar_7.jpg" alt="">
                             </div>
-                            <div class="text flex column justify-center debug">
+                            <div class="text flex column justify-center ">
                                 <h3>Federico</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
-                            <div class="time debug">
+                            <div class="time ">
                                 <p>15:35</p>
                             </div>
                         </div>
-                        <div class="user flex debug">
-                            <div class="image debug">
+                        <div class="user flex ">
+                            <div class="image ">
                                 <img src="img/avatar_8.jpg" alt="">
                             </div>
-                            <div class="text flex column justify-center debug">
+                            <div class="text flex column justify-center ">
                                 <h3>Davide</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
-                            <div class="time debug">
+                            <div class="time ">
                                 <p>16:45</p>
                             </div>
                         </div>
-                        <div class="user flex debug">
-                            <div class="image debug">
+                        <div class="user flex ">
+                            <div class="image ">
                                 <img src="img/avatar_2.jpg" alt="">
                             </div>
-                            <div class="text flex column justify-center debug">
+                            <div class="text flex column justify-center ">
                                 <h3>Peter</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
-                            <div class="time debug">
+                            <div class="time ">
                                 <p>16:01</p>
                             </div>
                         </div>
-                        <div class="user flex debug">
-                            <div class="image debug">
+                        <div class="user flex ">
+                            <div class="image ">
                                 <img src="img/avatar_5.jpg" alt="">
                             </div>
-                            <div class="text flex column justify-center debug">
+                            <div class="text flex column justify-center ">
                                 <h3>Walter</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
-                            <div class="time debug">
+                            <div class="time ">
                                 <p>16:50</p>
                             </div>
                         </div>
-                        <div class="user flex debug">
-                            <div class="image debug">
+                        <div class="user flex ">
+                            <div class="image ">
                                 <img src="img/avatar_6.jpg" alt="">
                             </div>
-                            <div class="text flex column justify-center debug">
+                            <div class="text flex column justify-center ">
                                 <h3>Olivia</h3>
                                 <p>Lorem ipsum dolor sit amet.</p>
                             </div>
-                            <div class="time debug">
+                            <div class="time ">
                                 <p>16:47</p>
                             </div>
                         </div>
                         
                     </div>
                 </div>
-                <div class="col-large flex column debug">
-                    <div class="nav debug flex justify-between ">
-                        <div class="img-status flex debug">
-                            <div class="image-top debug">
+                <div class="col-large flex column ">
+                    <div class="nav  flex justify-between ">
+                        <div class="img-status flex ">
+                            <div class="image-top ">
                                 <img src="img/avatar_1.jpg" alt="">
                             </div>
-                            <div class="accesso flex column justify-center debug">
+                            <div class="accesso flex column justify-center ">
                                 <h3>Michele</h3>
                                 <p>Ultimo accesso oggi alle 16:26</p>
                             </div>
                         </div>
-                        <div class="icone flex debug">
+                        <div class="icone flex ">
                             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                             <a href="#"><i class="fa-solid fa-paperclip"></i></a>
                             <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         </div>
                     </div>
-                    <div class="main-chat flex column debug">
-                        <div class="msg-sent debug"></div>
-                        <div class="msg-received"></div>
+                    <div class="main-chat flex column ">
+                        <div class="msg-sent flex column ">
+                            <p class="mex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores exercitationem placeat, cupiditate ullam ex reiciendis asperiores minima quasi saepe modi?</p>
+                            <i class="fa-solid fa-chevron-down "></i>
+                            <p class="orario ">16:13</p>
+                        </div>
+                        <div class="msg-received flex column ">
+                            <p class="mex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores exercitationem placeat, cupiditate ullam ex reiciendis asperiores minima quasi saepe modi?</p>
+                            <i class="fa-solid fa-chevron-down "></i>
+                            <p class="orario ">16:13</p>
+                        </div>
                     </div>
-                    <div class="nav-btm debug flex">
-                        <div class="emoji flex justify-center align-center debug">
+                    <div class="nav-btm  flex">
+                        <div class="emoji flex justify-center align-center ">
                             <a href="#"><i class="fa-regular fa-face-smile"></i></a>
                         </div>
-                        <div class="scrivi flex debug">
+                        <div class="scrivi flex ">
                             <input type="text" placeholder="    Scrivi un messaggio" id="txt">
                         </div>
-                        <div class="vocale flex justify-center align-center debug">
+                        <div class="vocale flex justify-center align-center ">
                             <a href="#"><i class="fa-solid fa-microphone"></i></a>
                         </div>
                     </div>
