--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <i class="fa-solid fa-bell-slash"></i>
                         </div>
                         <div class="accesso flex column justify-center ">
-                            <h3>Ricevi notifiche di nuovi messaggi</h3>
+                            <h4>Ricevi notifiche di nuovi messaggi</h4>
                             <p><a href="#">Attiva notifiche desktop</a></p>
                         </div>
                     </div>
@@ -184,12 +184,12 @@
                     <div class="main-chat flex column ">
                         <div class="msg-sent flex column ">
                             <p class="mex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores exercitationem placeat, cupiditate ullam ex reiciendis asperiores minima quasi saepe modi?</p>
-                            <i class="fa-solid fa-chevron-down "></i>
+                            <a href="#"><i class="fa-solid fa-chevron-down "></i></a>
                             <p class="orario ">16:13</p>
                         </div>
                         <div class="msg-received flex column ">
                             <p class="mex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores exercitationem placeat, cupiditate ullam ex reiciendis asperiores minima quasi saepe modi?</p>
-                            <i class="fa-solid fa-chevron-down "></i>
+                            <a href="#"><i class="fa-solid fa-chevron-down "></i></a>
                             <p class="orario ">16:13</p>
                         </div>
                     </div>
