--- a/index.html
+++ b/index.html
@@ -181,15 +181,27 @@
                             <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                         </div>
                     </div>
-                    <div class="main-chat flex column ">
+                    <div class="main-chat flex column">
                         <div class="msg-sent flex column ">
                             <p class="mex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores exercitationem placeat, cupiditate ullam ex reiciendis asperiores minima quasi saepe modi?</p>
-                            <a href="#"><i class="fa-solid fa-chevron-down "></i></a>
+                            <div class="msg-menu ">
+                                <a href="#"><i class="fa-solid fa-chevron-down "></i></a>
+                                <div class="msg-menu-panel ">
+                                    <div class="info flex justify-center align-center ">Info messaggio</div>
+                                    <div class="cancel flex justify-center align-center ">Cancella messaggio</div>
+                                </div>
+                            </div>
                             <p class="orario ">16:13</p>
                         </div>
                         <div class="msg-received flex column ">
                             <p class="mex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores exercitationem placeat, cupiditate ullam ex reiciendis asperiores minima quasi saepe modi?</p>
-                            <a href="#"><i class="fa-solid fa-chevron-down "></i></a>
+                            <div class="msg-menu ">
+                                <a href="#"><i class="fa-solid fa-chevron-down "></i></a>
+                                <div class="msg-menu-panel ">
+                                    <div class="info flex justify-center align-center ">Info messaggio</div>
+                                    <div class="cancel flex justify-center align-center ">Cancella messaggio</div>
+                                </div>
+                            </div>
                             <p class="orario ">16:13</p>
                         </div>
                     </div>
